# TestC

./: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: Test.cpp  Test.h  native-lib.cpp
app/src/main/java/shinelee/main/: App.java  MainActivity.java
app/src/main/java/shinelee/main/camera/: CameraActivity.java  CameraActivity.kt  CameraView.java  KotlinTest.kt
app/src/main/java/shinelee/main/jni/: JniLibrary.java
app/src/main/java/shinelee/main/util/: ReflectionUtils.java  ScreenUtils.java
app/src/main/java/shinelee/main/view/: DribbleNumberView.java  DribbleNumberView2.java  GiftAnimationDrawable.java
app/src/main/java/shinelee/main/xposed/: Happy.java  Nice.java
app/src/main/java/shinelee/testc/: App.java  MainActivity.java
app/src/main/java/shinelee/testc/jni/: JniLibrary.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  layout_kotlin_test.xml
gradle/wrapper/: gradle-wrapper.properties
